# DLGG_CPP

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  make_zobrist.py  zob.txt
dlgg/: CMakeLists.txt
dlgg/agent/: CMakeLists.txt
dlgg/agent/include/dlgg/agent/include/: agent.h  minmaxbot.h  randombot.h
dlgg/agent/src/: agent.cpp
dlgg/game/: CMakeLists.txt
dlgg/game/include/dlgg/game/include/: gamestate.h  gamestate_impl.h  goboard.h  goboard_impl.h  gostring.h  gotypes.h  zobrist.h
dlgg/game/src/: gamestate.cpp  gamestate_impl.cpp  goboard.cpp  goboard_impl.cpp  gostring.cpp  gotypes.cpp
dlgg/util/: CMakeLists.txt
dlgg/util/include/dlgg/util/include/: util.h
dlgg/util/src/: util.cpp
